live/mgmt/traefik/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-http
  namespace: vault
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`cts-hvc.dsmillie.cts-gcp.com`) && PathPrefix(`/`)
      middlewares:
        - name: https-only
          namespace: traefik
      services:
        - name: vault
          namespace: vault
          port: 443
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: vault
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cts-hvc.dsmillie.cts-gcp.com`) && PathPrefix(`/`)
      services:
        - name: vault
          namespace: vault
          port: 443
  tls:
    secretName: vault-cert
